change mail service

--- a/ticket-email-user-service/src/main/resources/templates/mail_page.html
+++ b/ticket-email-user-service/src/main/resources/templates/mail_page.html
@@ -3,8 +3,9 @@
 <head>
     <title>Registration Page</title>
 
-    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-
+    <link type="text/css"
+          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"
+          rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
@@ -21,18 +22,18 @@
         </div>
 
         <div class="form-group" th:classappend="${#fields.hasErrors('subject')} ? 'has-error'">
-            <label class="control-label col-xs-2" for="password">Subject</label>
+            <label class="control-label col-xs-2" for="subject">Subject</label>
             <div class="col-xs-10">
-                <input id="password" type="password" title="password" th:field="*{subject}"/>
+                <input id="subject" type="text" title="subject" th:field="*{subject}"/>
                 <span th:if="${#fields.hasErrors('subject')}" th:errors="*{subject}" class="help-block">Subject Error</span>
             </div>
         </div>
 
         <div class="form-group" th:classappend="${#fields.hasErrors('text')} ? 'has-error'">
-            <label class="control-label col-xs-2" for="passwordConfirmation">Text</label>
+            <label class="control-label col-xs-2" for="text">Text</label>
             <div class="col-xs-10">
-                <input id="passwordConfirmation" type="password" title="passwordConfirmation" th:field="*{text}"/>
-                <span th:if="${#fields.hasErrors('text')}" th:errors="*{text}" class="help-block">Password Confirmation Error</span>
+                <input id="text" type="text" title="text" th:field="*{text}"/>
+                <span th:if="${#fields.hasErrors('text')}" th:errors="*{text}" class="help-block">Text Error</span>
             </div>
         </div>
 
