change mail service

--- a/ticket-email-user-service/src/main/resources/templates/mail_page.html
+++ b/ticket-email-user-service/src/main/resources/templates/mail_page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Registration page</h1>
+    <h1>Mail page</h1>
     <form id="userForm" th:action="@{/mail/doSend}" th:object="${message}" action="#" method="post" class="form-horizontal">
 
 
