--- a/ticket-user-registration/src/main/resources/templates/registrationPage.html
+++ b/ticket-user-registration/src/main/resources/templates/registrationPage.html
@@ -9,15 +9,15 @@
 <body>
 <div class="container">
   <h1>Registration page</h1>
-  <form id="userForm" th:action="@{/reg}" th:object="${user}" action="#" method="post" class="form-horizontal">
+  <form id="userForm" th:action="@{/reg}" th:object="${account}" action="#" method="post" class="form-horizontal">
     <div th:if="${#fields.hasErrors('global')}" th:errors="*{global}" class="alert alert-danger">Incorrect password confirmation</div>
     <input type="hidden" th:field="*{id}"/>
 
     <div class="form-group" th:classappend="${#fields.hasErrors('email')} ? 'has-error'">
       <label class="control-label col-xs-2" for="email">Email</label>
       <div class="col-xs-10">
-        <input id="email" type="email" title="email" th:field="*{email}"/>
-        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="help-block">Email Error</span>
+        <input id="email" type="email" title="email" th:field="*{loginEmail}"/>
+        <span th:if="${#fields.hasErrors('email')}" th:errors="*{loginEmail}" class="help-block">Email Error</span>
       </div>
     </div>
     <div class="form-group" th:classappend="${#fields.hasErrors('password')} ? 'has-error'">
