finish add js validate pass

--- a/ticket-user-registration/src/main/resources/templates/forgotPassword.html
+++ b/ticket-user-registration/src/main/resources/templates/forgotPassword.html
@@ -14,7 +14,8 @@
 
 		<form th:action="@{/user/resetPassword}" method="post" class="form-horizontal">
 			<div class="row">
-				<label class="col-sm-1" for="email">Email:</label> <span class="col-sm-5"><input class="form-control" id="email" name="email" type="email" /></span>
+				<label class="col-sm-1" for="email">Email:</label> <span class="col-sm-5">
+				<input class="form-control" id="email" name="email" type="email" /></span>
 				<button class="btn btn-primary" type="submit">Reset Password</button>
 			</div>
 		</form>
